// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
      >
        <svg
          class="ZDlJU6tECg7ouG-b27gya _2SoAwA0A8G1BGDNjtkt-lt"
          data-testid="person"
          viewBox="0 0 1024 1024"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="_2GsLyQLHv8yNULHeXGdver _29W47x5R7CHDPdmq99tUBc"
            d="M512.5 466.789c-94.347 0-170.832-76.485-170.832-170.834s76.485-170.834 170.832-170.834c94.351 0 170.834 76.485 170.834 170.834s-76.482 170.834-170.834 170.834zM512.5 381.372c47.176 0 85.416-38.242 85.416-85.416s-38.241-85.416-85.416-85.416c-47.171 0-85.416 38.242-85.416 85.416s38.245 85.416 85.416 85.416zM225.9 808.457h573.204c-36.734-123.513-151.248-213.542-286.603-213.542s-249.867 90.029-286.601 213.542zM811.588 808.443l-0.115 0.013zM213.531 808.457l-0.114-0.013zM130.046 809.122c38.595-171.508 199.291-299.625 382.454-299.625 183.168 0 343.965 128.116 382.561 299.625 1.264 5.62 1.79 11.134 1.649 16.477-0.068 2.725-0.311 5.407-0.718 8.034-5.308 34.475-38.498 60.24-76.977 60.24h-612.926c-39.062 0-72.674-26.552-77.198-61.816-0.94-7.32-0.625-15.021 1.156-22.934z"
          />
        </svg>
      </div>
    </div>
    <div
      class="dropZoneBase"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="labelStyle"
        >
          Upload Image
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders with a provided image 1`] = `
<div>
  <div
    class="inputAvatar"
  >
    <div
      class="preview"
    >
      <div
        class="avatar large isDark"
        role="img"
        style="background-image: url(https://api.adorable.io/avatars/150/jobbler);"
      />
    </div>
    <div
      class="dropZoneBase"
      tabindex="-1"
    >
      <input
        accept="image/*"
        autocomplete="off"
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <button
        class="button small work secondary fullWidth"
        type="button"
      >
        <span
          class="labelStyle"
        >
          Change Image
        </span>
      </button>
    </div>
    <button
      class="button small destructive secondary"
      type="button"
    >
      <span
        class="labelStyle"
      >
        Remove
      </span>
    </button>
  </div>
</div>
`;
